@@ -35,7 +35,8 @@ enum gretl_matrix_errors {
 
 enum gretl_matrix_mods {
     GRETL_MOD_NONE = 0,
-    GRETL_MOD_TRANSPOSE = 1
+    GRETL_MOD_TRANSPOSE,
+    GRETL_MOD_SQUARE
 };
 
 typedef struct _gretl_matrix gretl_matrix;
@@ -52,6 +53,8 @@ gretl_matrix *gretl_matrix_alloc (int rows, int cols);
 gretl_matrix *gretl_packed_matrix_alloc (int rows);
 
 gretl_matrix *gretl_matrix_copy (gretl_matrix *m);
+
+gretl_matrix *gretl_diagonal_matrix (const double *d, int n, int mod);
 
 gretl_matrix *gretl_matrix_from_2d_array (const double **X, 
 					  int rows, int cols);
