@@ -1141,7 +1141,7 @@ static int real_var (int order, const LIST inlist,
 	varlist[1] = depvars[i];
 
 	/* run an OLS regression for the current dependent var */
-	*pmod = lsq(varlist, pZ, pdinfo, VAR, OPT_R | OPT_A, 0.0);
+	*pmod = lsq(varlist, pZ, pdinfo, VAR, OPT_D | OPT_A, 0.0);
 	pmod->aux = VAR;
 	pmod->ID = i + 1;
 
@@ -1379,7 +1379,7 @@ int coint (int order, const LIST list, double ***pZ,
     pputc(prn, '\n');
     pprintf(prn, _("Step %d: cointegration\n"), l0 + 1);
     
-    coint_model = lsq(cointlist, pZ, pdinfo, OLS, OPT_R, 0.0); 
+    coint_model = lsq(cointlist, pZ, pdinfo, OLS, OPT_D, 0.0); 
     coint_model.aux = AUX_COINT;
     printmodel(&coint_model, pdinfo, prn);
 
@@ -1671,7 +1671,7 @@ int ma_model (LIST list, double ***pZ, DATAINFO *pdinfo, PRN *prn)
     for (t=t0+1; t<T; t++) { 
 	(*pZ)[v][t] = (*pZ)[iv][t] + a * (*pZ)[v][t-1];
     }
-    mamod = lsq(malist, pZ, pdinfo, OLS, OPT_R, 0.0);
+    mamod = lsq(malist, pZ, pdinfo, OLS, OPT_D, 0.0);
     printmodel(&mamod, pdinfo, prn);
 
     pputs(prn, "\nEstimates of original parameters:\n");
